[gd_scene load_steps=19 format=2]

[ext_resource path="res://main2.gd" type="Script" id=1]
[ext_resource path="res://Exo2-Italic-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Exo2-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://shelf.png" type="Texture" id=4]
[ext_resource path="res://Entry.tscn" type="PackedScene" id=5]
[ext_resource path="res://Nunito-Light.ttf" type="DynamicFontData" id=7]

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 1, 1, 1, 0.156863 )

[sub_resource type="StyleBoxFlat" id=1]
content_margin_right = 2.0
content_margin_bottom = 2.0
draw_center = false

[sub_resource type="StyleBoxLine" id=17]
vertical = true

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFont" id=10]
size = 32
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
size = 32
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.0352941, 0.0156863, 0.141176, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 1, 1, 1, 0.156863 )
border_width_left = 1
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="DynamicFont" id=4]
size = 42
outline_size = 2
outline_color = Color( 1, 1, 1, 0.27451 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.0352941, 0.0156863, 0.141176, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=21]
size = 46
font_data = ExtResource( 7 )

[node name="Window" type="Control"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0352941, 0.0156863, 0.141176, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorPanel" type="Panel" parent="ColorRect"]
anchor_bottom = 1.0
margin_right = 813.0
custom_styles/panel = SubResource( 20 )

[node name="TextureRect" type="TextureRect" parent="ColorRect/ColorPanel"]
visible = false
self_modulate = Color( 1, 1, 1, 0.133333 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 391.0
margin_right = -507.0
margin_bottom = -4.0
texture = ExtResource( 4 )
expand = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -222.0
custom_styles/bg = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="EntriesContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 796.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Button" parent="ScrollContainer/EntriesContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 796.0
margin_bottom = 30.0

[node name="Panel" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -211.0
custom_styles/panel = SubResource( 17 )

[node name="PlusButton" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -203.0
margin_top = -55.0
margin_right = -155.0
margin_bottom = -7.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )

[node name="Label" type="Label" parent="Panel/PlusButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -7.0
margin_right = 4.0
custom_fonts/font = SubResource( 10 )
text = "+"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="RemoveButton" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -143.0
margin_top = -55.0
margin_right = -95.0
margin_bottom = -7.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )

[node name="Label" type="Label" parent="Panel/RemoveButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -7.0
margin_right = 4.0
custom_fonts/font = SubResource( 10 )
text = "-"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Button3" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -55.0
margin_right = -7.0
margin_bottom = -7.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )

[node name="Label" type="Label" parent="Panel/Button3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -5.0
margin_right = 4.0
margin_bottom = 2.0
custom_fonts/font = SubResource( 14 )
text = "?"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="Panel"]
anchor_left = 0.005
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0549999
margin_bottom = -427.0
custom_styles/panel = SubResource( 18 )

[node name="Label" type="Label" parent="Panel/Panel"]
margin_left = 5.0
margin_top = 8.0
margin_right = 198.0
margin_bottom = 28.0
custom_styles/normal = SubResource( 16 )
text = "Product:"
valign = 1

[node name="Label" type="Label" parent="Panel/Panel/Label"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -136.0

[node name="Label2" type="Label" parent="Panel/Panel"]
margin_left = 5.0
margin_top = 34.0
margin_right = 198.0
margin_bottom = 54.0
custom_styles/normal = SubResource( 16 )
text = "Store:"
valign = 1

[node name="Label" type="Label" parent="Panel/Panel/Label2"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -152.0

[node name="Label3" type="Label" parent="Panel/Panel"]
margin_left = 5.0
margin_top = 61.0
margin_right = 198.0
margin_bottom = 81.0
custom_styles/normal = SubResource( 16 )
text = "Status:"
valign = 1

[node name="Label" type="Label" parent="Panel/Panel/Label3"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -146.0

[node name="Label4" type="Label" parent="Panel/Panel"]
margin_left = 5.0
margin_top = 88.0
margin_right = 198.0
margin_bottom = 108.0
custom_styles/normal = SubResource( 16 )
text = "Current Price:"
valign = 1

[node name="Label" type="Label" parent="Panel/Panel/Label4"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0

[node name="Label5" type="Label" parent="Panel/Panel"]
margin_left = 5.0
margin_top = 117.0
margin_right = 198.0
margin_bottom = 137.0
custom_styles/normal = SubResource( 16 )
text = "Target Price:"
valign = 1

[node name="Label" type="Label" parent="Panel/Panel/Label5"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -110.0

[node name="Label6" type="Label" parent="Panel/Panel"]
margin_left = 5.0
margin_top = 147.0
margin_right = 198.0
margin_bottom = 167.0
custom_styles/normal = SubResource( 16 )
text = "Login Creds:"
valign = 1

[node name="Label" type="Label" parent="Panel/Panel/Label6"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -111.0

[node name="AddItemsText" type="Label" parent="."]
anchor_right = 0.758
anchor_bottom = 1.0
margin_right = -0.192017
custom_colors/font_color = Color( 0.0352941, 0.0156863, 0.141176, 1 )
custom_fonts/font = SubResource( 4 )
text = "Add Items to Watch"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Popup" type="Popup" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
popup_exclusive = true
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.627451 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -39.0
margin_right = 176.0
margin_bottom = 39.0
custom_styles/panel = SubResource( 19 )

[node name="WebsiteURL" type="LineEdit" parent="Popup/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -154.0
margin_top = 15.0
margin_right = 155.0
margin_bottom = 39.0
text = "https://www.newegg.com/p/N82E16834233534"
placeholder_text = "Website"

[node name="SaveButton" type="Button" parent="Popup/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -23.5
margin_top = -29.0
margin_right = 23.5
margin_bottom = -9.0
text = "Save"

[node name="DebugLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -109.0
margin_right = 531.0
custom_fonts/font = SubResource( 21 )
text = "MODE: "
